	  parser extended to trap incorrect paths early
	- Bug #1703: COSS failed to initialize async-io threads
	- Bug #1703: should abort if diskd helper exits unexpectedly
	- Bug #1702: Warn if acl name is too long
	- Bug #1685: Crashes or other odd results after storeSwapMetaUnpack: errors
	- wccp2_rebuild_wait directive to delay registering with WCCP until the

Changes to squid-2.6.STABLE1 (1 Jul 2006)
	
	- New --enable-default-hostsfile configure option
	- Added username info to active_requests cachemgr stats
	- Modified squid MIB to incorporate squid.conf visible_hostname
	- Added multi-line capability in squid.conf
	- Added new httpd_suppress_version_string configuration directive
	- WCCPv2 support
	- Negotiate authentication scheme support
	- NTLM authentication scheme rewritten
	- Customizable access log formats
	- Selective access logging
	- Access logging via syslog
	- Reverse proxy enhancements, with new cache_peer based forwarding
	  model.
	- LDAP based Digest helper (Note: not true LDAP integration, just using
	  LDAP for storage of the Digest hashes)
	- Improved helper communication protocol
	- External ACL improvements. %PATH, log=, grace=, and more..
	- Improved SSL support with hardware offload, client certificate
	  support (primitive), chained certificates and numerous bug fixes
	- DNS lookups now use the search path from /etc/resolv.conf or
	  the Windows registry
	- Linux epoll support
	- collapsed forwarding to optimize reverse proxies or other
	  setups having very many clients going to the same URL
	- New improved COSS implementation
	- Optional support for blank passwords
	- The old and obsolete Samba-2.2.X winbind helpers have been removed
	- external acls now uses the simplified URL-escaped protol "3.0" by
	  default.
	- Linux TPROXY support
	- Support for proxying of Microsoft Integrated Login by adding
	  support for the deviations from the HTTP protocol required
	  to support these authentication mechanisms